---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/pointers/test_large_ptradd.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/pointers/test_large_ptradd.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition xs~2 `array<array<int; 123>; 123>` ∅)
         (expression
            (assign `int`
               (deref `int`
                  (ptr-add `ptr<int>`
                     (noop-type-conversion `ptr<int>`
                        (addressof `ptr<array<int; 123>>`
                           (deref `array<int; 123>`
                              (ptr-add `ptr<array<int; 123>>`
                                 (noop-type-conversion `ptr<array<int; 123>>`
                                    (addressof `ptr<array<array<int; 123>; 123>>`
                                       (xs~2 `array<array<int; 123>; 123>`)))
                                 (sign-extend `long` (122 `int`))))))
                     (sign-extend `long` (122 `int`))))
               (42 `int`)))
         (return
            (deref `int`
               (ptr-add `ptr<int>`
                  (noop-type-conversion `ptr<int>`
                     (addressof `ptr<array<int; 123>>`
                        (deref `array<int; 123>`
                           (ptr-add `ptr<array<int; 123>>`
                              (noop-type-conversion `ptr<array<int; 123>>`
                                 (addressof `ptr<array<array<int; 123>; 123>>`
                                    (xs~2 `array<array<int; 123>; 123>`)))
                              (sign-extend `long` (122 `int`))))))
                  (sign-extend `long` (122 `int`))))))))

----- stderr -----
